fix css for plain org list spacing

--- a/css/org-extra.css
+++ b/css/org-extra.css
@@ -94,3 +94,22 @@ tbody tr:nth-child(2n+2) {
 tbody tr td a {
     text-decoration: underline !important; /* meh.... */
 }
+
+
+
+/* by default p marging is 16px and emacs emits standalon p tags which messes with spacing between list items.. */
+
+.org-ul li {
+    margin-top: 0.5em;
+}
+
+.org-ul li p {
+    margin-bottom: 0;
+    margin-top: 0.5em;
+}
+
+.org-ul li p:first-child {
+    margin-top: 0;
+}
+
+/* end */
